--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,5 @@
 DJANGO_SECRET_KEY=django-insecure-$$mg-vrhx*5c-jx_=0)sif8#5$76g1p1ugua2km6o^m8buz9&8
 DEBUG=True
+
+SYSTEM_EMAIL_USER=
+SYSTEM_EMAIL_PASSWORD=
