--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 dj-rest-auth==5.0.2
 Django==5.0.1
 django-allauth==0.60.1
+django-cors-headers==4.3.1
 django-debug-toolbar==4.2.0
 django-environ==0.11.2
 django-phonenumber-field==7.3.0
