add email creds, add order filters

--- a/config/.env
+++ b/config/.env
@@ -2,4 +2,4 @@ DJANGO_SECRET_KEY=django-insecure-$$mg-vrhx*5c-jx_=0)sif8#5$76g1p1ugua2km6o^m8bu
 DEBUG=True
 
 SYSTEM_EMAIL_USER=amrtahashehata@gmail.com
-SYSTEM_EMAIL_PASSWORD=cutbekjgtjpbiboc
+SYSTEM_EMAIL_PASSWORD=
